--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "botkit-shingeki-no chatbot",
+  "name": "botkit-shingeki-no-chatbot",
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
